fixed editor overflowing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -24,7 +24,9 @@ h1, h3 {
 }
 
 .ide-container {
+    overflow: auto;
     border: 2px solid #167a4f;
+    padding: 0;
 }
 
 .output-container {
@@ -52,7 +54,8 @@ h1, h3 {
 }
 
 #editor {
-    margin-top: 10px;
+    /* margin-top: 10px; */
+    margin: 0;
     width: 100%;
 }
 
